# AIRMS

./: .env.template  .gitignore  1.text  API_DOCUMENTATION.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  FRONTEND_INTEGRATION_GUIDE.md  GCP_ADVANCED_DEPLOYMENT.md  GCP_DEPLOYMENT_USAGE.md  QUICK_START.md  cloudbuild-advanced.yaml  cloudbuild.yaml  deploy-complete.ps1  deploy-gke.ps1  deploy-simple.ps1  deploy-terraform.ps1  deploy.ps1  deployment.md  docker-compose.yml  gcp-deploy.ps1  package-lock.json  package.json  render.yaml  test_complete_system.py
backend/: # Use Python 3.13.dockerfile  .dockerignore  .gcloudignore  Dockerfile  Dockerfile.advanced  README.md  RISK_DETECTION_IMPROVEMENTS.md  app.yaml  cloudbuild.yaml  create_admin_user.py  demo_api_usage.py  deploy_gcp.ps1  init-mongo.js  project_structure.txt  pyproject.toml  pytest.ini  requirements.txt  seed_notifications.py  setup.py  setup_airms_plus.py  test_mitigation_integration.py  test_risk_detection.py  test_risk_detection_enhanced.py  test_server.py
backend/api/middleware/: rate_limiter.py
backend/api/v1/: risk_detection.py
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  config.py  database.py  security.py
backend/app/middleware/: pii_safety.py
backend/db/: models.py
backend/schemas/: __init__.py  base.py  requests.py  responses.py
backend/scripts/: debug_routes.py  dev.py  setup_database.py  start_server.py  test_api.py  test_chat_responses.py  verify_imports.py  verify_setup.py  verify_structure.py
backend/tests/: test_comprehensive_suite.py
backend/utils/: sanitizers.py
(+141 files in other folders)
