[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airms_backend"
version = "1.0.0"
description = "AIRMS+ Backend API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "motor>=3.3.1",
    "pydantic>=2.3.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0"
]

[tool.hatch.build]
include = [
    "app/**/*.py",
    "app/**/*.json",
    "README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true